--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css"></link>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root">not render!</div>
 
     <script src="App.js"></script>
